# moveit_studio_sdk

./: Dockerfile  LICENSE  README.md  docker-compose.yaml
.docker/: Dockerfile  README.md  cyclonedds.xml  docker-compose.yaml
.github/workflows/: ci.yaml
moveit_pro_msgs/moveit_pro_agent_msgs/msg/: ClientInfo.msg  FaultStatus.msg  Json.msg
moveit_pro_msgs/moveit_pro_agent_msgs/srv/: RetrieveJointState.srv  SetTransform.srv  StoreJointState.srv
moveit_pro_msgs/moveit_pro_sdk_msgs/: README.md  package.xml
moveit_pro_msgs/moveit_pro_sdk_msgs/msg/: TeleoperationMode.msg
moveit_pro_msgs/moveit_pro_vision_msgs/: CMakeLists.txt  package.xml
moveit_pro_msgs/moveit_pro_vision_msgs/msg/: GraspableObject.msg  Mask2D.msg  ObjectSubframe.msg
moveit_pro_msgs/moveit_studio_agent_msgs/: CMakeLists.txt
moveit_pro_msgs/moveit_studio_agent_msgs/msg/: LicenseInfo.msg
moveit_pro_msgs/moveit_studio_agent_msgs/srv/: GetClosestFrame.srv  RetrievePose.srv  SendPointCloud2.srv  StorePose.srv
moveit_pro_msgs/moveit_studio_msgs/: CMakeLists.txt
moveit_pro_msgs/moveit_studio_sdk_msgs/: CMakeLists.txt
moveit_pro_msgs/moveit_studio_sdk_msgs/msg/: BehaviorParameter.msg
moveit_pro_msgs/moveit_studio_vision_msgs/msg/: ObjectDetection.msg
moveit_pro_py/: README.md
moveit_pro_py/examples/: start_stop_async.py
moveit_studio_msgs/moveit_pro_controllers_msgs/: CMakeLists.txt  package.xml
moveit_studio_msgs/moveit_pro_controllers_msgs/action/: FollowJointTrajectoryWithAdmittance.action
moveit_studio_msgs/moveit_pro_controllers_msgs/msg/: AdmittanceParameters.msg  CartesianSelectionVector.msg  JointVelocityControllerState.msg  VelocityForceCommand.msg  VelocityForceControllerState.msg
moveit_studio_msgs/moveit_pro_controllers_msgs/srv/: ConfigureJointVelocityController.srv  ConfigureVelocityForceController.srv
moveit_studio_msgs/moveit_studio_agent_msgs/: CMakeLists.txt  package.xml
moveit_studio_msgs/moveit_studio_agent_msgs/msg/: AgentInfo.msg  EndEffector.msg  Event.msg  LicenseInfo.msg  Log.msg  MtcSolution.msg  ObjectiveServerStatus.msg  PlanningGroup.msg  RobotJointState.msg  Waypoint.msg
moveit_studio_msgs/moveit_studio_agent_msgs/srv/: AddToolInWorld.srv  AddURDF.srv  AttachTool.srv  AttachURDF.srv  ClearStoredParameters.srv  DetachOrRemoveTool.srv  DetachOrRemoveURDF.srv  DetachTool.srv  EditWaypoints.srv  GetAgentInfo.srv  GetClickedPointNormal.srv  GetPlanningGroups.srv  GetWaypoints.srv  RetrieveBehaviorParameter.srv  RetrieveJointState.srv  RetrieveMtcIntrospectionData.srv  RetrievePose.srv  SavePose.srv  SendPointCloud2.srv  SetStringArray.srv  StoreJointState.srv  StoreMtcIntrospectionData.srv  StorePose.srv
moveit_studio_msgs/moveit_studio_msgs/: CMakeLists.txt  package.xml
moveit_studio_msgs/moveit_studio_sdk_msgs/: CMakeLists.txt  README.md  package.xml
moveit_studio_msgs/moveit_studio_sdk_msgs/action/: DoObjectiveSequence.action  DoTeleoperate.action
moveit_studio_msgs/moveit_studio_sdk_msgs/msg/: BehaviorParameter.msg  BehaviorParameterDescription.msg  TeleoperationMode.msg
moveit_studio_msgs/moveit_studio_sdk_msgs/srv/: CancelObjective.srv  ExecuteObjective.srv  RetrieveBehaviorParameter.srv  SetBehaviorParameter.srv
moveit_studio_msgs/moveit_studio_tamp_msgs/: CMakeLists.txt  package.xml
moveit_studio_msgs/moveit_studio_tamp_msgs/srv/: GetGraspableObject.srv  SetGraspableObject.srv
moveit_studio_msgs/moveit_studio_vision_msgs/: CMakeLists.txt  package.xml
moveit_studio_msgs/moveit_studio_vision_msgs/action/: GetMasks2D.action  ShapeCompletion.action
moveit_studio_msgs/moveit_studio_vision_msgs/msg/: ClassHypothesis.msg  GraspInfo.msg  GraspableFace.msg  GraspableObject.msg  Mask2D.msg  Mask2DArray.msg  Mask3D.msg  ObjectDetectionArray.msg  ObjectPart.msg  ObjectPartMesh.msg  ObjectPartPrimitive.msg  ObjectSubframe.msg  PointCloudPCD.msg
moveit_studio_py/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
moveit_studio_py/examples/: move_to_joint_state.py  move_to_waypoint.py  start_blocking.py  start_stop_async.py
moveit_studio_py/moveit_studio_py/: objective_manager.py  start_blocking.py  start_stop_async.py  start_stop_blocking.py
moveit_studio_py/test/: test_copyright.py
moveit_studio_sdk_msgs/: package.xml
moveit_studio_sdk_msgs/msg/: BehaviorParameter.msg  BehaviorParameterDescription.msg  RequestStatus.msg
