<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_studio_py</name>
  <version>6.0.0</version>
  <description>Python API for MoveIt Pro SDK.</description>
  <author email="ashton.larkin@picknik.ai">Ashton Larkin</author>
  <maintainer email="ashton.larkin@picknik.ai">Ashton Larkin</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_msgs</depend>
  <depend>moveit_studio_sdk_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>picknik_ament_copyright</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
