<?xml version="1.0" encoding="utf-8" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_pro_controllers_msgs</name>
  <version>6.1.0</version>
  <description>Messages used by moveit_pro_controllers</description>
  <maintainer email="david.yackzan@picknik.ai">David Yackzan</maintainer>
  <maintainer email="mario.prats@picknik.ai">Mario Prats</maintainer>
  <maintainer email="paul.gesel@picknik.ai">Paul Gesel</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <build_depend>action_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
