<package format="3">
  <name>moveit_studio_agent_msgs</name>
  <version>2.11.0</version>
  <description>Messages, services, and actions used by the MoveIt Pro Agent</description>
  <author email="joseph.schornak@picknik.ai">Joe Schornak</author>
  <maintainer email="joseph.schornak@picknik.ai">Joe Schornak</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_studio_sdk_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
