<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_studio_tamp_msgs</name>
  <version>1.0.0</version>
  <description>Messages and services used for Task and Motion Planning (TAMP) in MoveIt Studio.</description>
  <author email="ashton.larkin@picknik.ai">Ashton Larkin</author>
  <maintainer email="ashton.larkin@picknik.ai">Ashton Larkin</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>moveit_studio_vision_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
