<package format="3">
  <name>moveit_studio_vision_msgs</name>
  <version>1.0.0</version>
  <description>Messages, services and actions used by MoveIt Studio vision capabilities.</description>
  <author email="sebastian.castro@picknik.ai">Sebastian Castro</author>
  <maintainer email="sebastian.castro@picknik.ai">Sebastian Castro</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
